# jellyfish-metadata-setter

./: .gitignore  Cargo.toml  README.md
src/: fpcalc_result.rs  handle_error.rs  main.rs  musicbrainz_id.rs  recording_info.rs  utils.rs  video.rs  wikipedia_response.rs
src/acoustid/: response.rs  result.rs
src/deezer/: album.rs  artist.rs  track.rs
