[package]
name = "test-musicbrainz"
version = "0.1.0"
edition = "2024"

[dependencies]
chrono = "0.4.41"
dotenv = "0.15.0"
image = "0.25.6"
inquire = "0.7.5"
mp4ameta = "0.13.0"
musicbrainz_rs = "0.11.0"
reqwest = "0.12.22"
serde = { version = "1.0.219", features = ["derive"] }
serde_json = "1.0.140"
tokio = "1.46.1"
webbrowser = "1.0.5"
