[package]
name = "jellyfish-metadata-setter"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = "1.0.98"
chrono = "0.4.41"
clap = { version = "4.5.41", features = ["derive"] }
dotenv = "0.15.0"
image = "0.25.6"
inquire = "0.7.5"
mp4ameta = "0.13.0"
musicbrainz_rs = "0.11.0"
reqwest = "0.12.22"
serde = { version = "1.0.219", features = ["derive"] }
serde_json = "1.0.140"
tokio = { version = "1.46.1", features = ["full"] }
